Session-36-services/ingress-demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: demo.local
    http:
      paths:
      - path: /app1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /app2(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app2-service
            port:
              number: 80



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: demo-ingress
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /app1
#         pathType: Prefix
#         backend:
#           service:
#             name: app1-service
#             port:
#               number: 80
#       - path: /app2
#         pathType: Prefix
#         backend:
#           service:
#             name: app2-service
#             port:
#               number: 80
